--- a/subpaginas/style.css
+++ b/subpaginas/style.css
@@ -15,8 +15,12 @@ td{
 #bloco{
     background-color: #373737;
     border-radius: 20px;
-    margin-top: 250px;
+    margin-top: 50px;
     padding: 10px;
+    text-align: center;
+    float:initial;
+    opacity: 85%;
+    display: flex;
 }
 
 #imagem{
